--- a/about.html
+++ b/about.html
@@ -5,10 +5,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
   <title>About | US States Dashboard</title>
   <link rel="stylesheet" href="assets/styles.css"/>
-  <style>
-    .erd-img{max-width:100%;height:auto;max-height:520px;object-fit:contain;border-radius:12px}
-    .team-pic{width:64px;height:64px;border-radius:50%;object-fit:cover;border:1px solid rgba(255,255,255,.12)}
-  </style>
 </head>
 <body data-page="about">
   <nav class="navbar">
@@ -20,7 +16,7 @@
         <li><a href="update.html">Update</a></li>
         <li><a href="delete.html">Delete</a></li>
         <li><a href="data.html">Charts</a></li>
-        <li><a href="about.html" class="active">About</a></li>
+        <li><a class="active" href="about.html">About</a></li>
       </ul>
       <a class="btn btn-outline-light" target="_blank" href="README.md">README (Tech)</a>
     </div>
@@ -31,15 +27,24 @@
       <h4 class="mb-3">About Us</h4>
 
       <div class="row g-3 mb-4">
-        <div class="col-md-4"><div class="card p-3 h-100 d-flex align-items-center gap-3 flex-row">
-          <img class="team-pic" src="assets/faisal.jpg" alt="Mohamed Faisal Sindhi"><div><h6 class="mb-1">Mohamed Faisal Sindhi</h6><div class="muted">Frontend, Deployment, Chatbot</div></div>
-        </div></div>
-        <div class="col-md-4"><div class="card p-3 h-100 d-flex align-items-center gap-3 flex-row">
-          <img class="team-pic" src="assets/hongxu.jpg" alt="Hongxu Yang"><div><h6 class="mb-1">Hongxu Yang</h6><div class="muted">UI/UX, ERD & Documentation</div></div>
-        </div></div>
-        <div class="col-md-4"><div class="card p-3 h-100 d-flex align-items-center gap-3 flex-row">
-          <img class="team-pic" src="assets/jonathan.jpg" alt="Jonathan James"><div><h6 class="mb-1">Jonathan James</h6><div class="muted">Controllers, Charts, Data Service</div></div>
-        </div></div>
+        <div class="col-md-4">
+          <div class="card p-3 h-100 d-flex align-items-center gap-2 flex-row">
+            <img class="team-pic" src="assets/faisal.jpg" alt="Mohamed Faisal Sindhi">
+            <div><h6 class="mb-1">Mohamed Faisal Sindhi</h6><div class="muted">Frontend, Deployment, Chatbot</div></div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card p-3 h-100 d-flex align-items-center gap-2 flex-row">
+            <img class="team-pic" src="assets/hongxu.jpg" alt="Hongxu Yang">
+            <div><h6 class="mb-1">Hongxu Yang</h6><div class="muted">UI/UX, ERD & Documentation</div></div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card p-3 h-100 d-flex align-items-center gap-2 flex-row">
+            <img class="team-pic" src="assets/jonathan.jpg" alt="Jonathan James">
+            <div><h6 class="mb-1">Jonathan James</h6><div class="muted">Controllers, Charts, Data Service</div></div>
+          </div>
+        </div>
       </div>
 
       <div class="mb-3 d-flex gap-2 flex-wrap">
@@ -49,46 +54,46 @@
 
       <h5 class="mb-2">Data Model (ERD)</h5>
       <img class="erd-img" src="assets/logical_data_model_v3.png" alt="Logical Data Model v3">
-      <small class="text-muted-2 d-block mt-2">Updated ERD used by the web application.</small>
+      <small class="text-muted-2 d-block mt-2">Updated ERD used by the application.</small>
 
       <hr class="my-4"/>
 
       <div class="row g-3">
         <div class="col-lg-6"><div class="card p-3 h-100">
-          <h6>API Endpoints Used (Read-Only)</h6>
+          <h6>API Endpoints (Read-Only)</h6>
           <ul class="mb-2">
             <li><code>https://api.worldbank.org/v2/country/USA/indicator/NY.GDP.MKTP.CD?format=json&per_page=60</code></li>
             <li><code>https://api.worldbank.org/v2/country/USA/indicator/SP.POP.TOTL?format=json&per_page=60</code></li>
           </ul>
-          <small class="text-muted-2">Displayed in “External Insights” on Charts; not persisted.</small>
+          <small class="text-muted-2">We display these values in “External Insights”. Data is not persisted.</small>
         </div></div>
 
         <div class="col-lg-6"><div class="card p-3 h-100">
           <h6>CRUD Implementation</h6>
           <ul class="mb-0">
-            <li><strong>Create:</strong> <code>create.html</code> → <code>DB.createState</code></li>
-            <li><strong>Read:</strong> <code>read.html</code> (searchable table)</li>
-            <li><strong>Update:</strong> <code>update.html</code> with chooser or <code>?id=XX</code></li>
-            <li><strong>Delete:</strong> <code>delete.html</code> with confirmation</li>
+            <li><b>Create:</b> <code>create.html</code> → <code>DB.createState()</code></li>
+            <li><b>Read:</b> <code>read.html</code> searchable table</li>
+            <li><b>Update:</b> <code>update.html</code> dropdown or <code>?id=XX</code></li>
+            <li><b>Delete:</b> <code>delete.html</code> confirmation flow</li>
           </ul>
         </div></div>
 
         <div class="col-lg-6"><div class="card p-3 h-100">
           <h6>MVC Architecture</h6>
           <ul class="mb-0">
-            <li><strong>Model:</strong> <code>assets/model.js</code> (localStorage, versioned seed)</li>
-            <li><strong>Controller:</strong> <code>assets/controller.js</code></li>
-            <li><strong>View:</strong> HTML pages + <code>assets/charts.js</code></li>
+            <li><b>Model:</b> <code>assets/model.js</code> (localStorage + schema versioning & migration)</li>
+            <li><b>Controller:</b> <code>assets/controller.js</code></li>
+            <li><b>View:</b> HTML pages + <code>assets/charts.js</code></li>
           </ul>
         </div></div>
 
         <div class="col-lg-6"><div class="card p-3 h-100">
-          <h6>Notable Challenges & Solutions</h6>
+          <h6>Challenges & Solutions</h6>
           <ul class="mb-0">
-            <li>KPI blank → render guards + setKPIs runs first.</li>
-            <li>Update UX → added dropdown loader when no <code>?id</code>.</li>
-            <li>External API reliability → switched to World Bank (CORS OK) with error UI.</li>
-            <li>Persistence → singleton localStorage with schema versioning.</li>
+            <li>KPI blanks → set KPIs separate from chart rendering.</li>
+            <li>Charts not loading → migrated old storage keys to the new one.</li>
+            <li>External API blocked → added World Bank with graceful local fallback.</li>
+            <li>Update UX → added in-page chooser when <code>?id</code> is missing.</li>
           </ul>
         </div></div>
       </div>
