--- a/data.html
+++ b/data.html
@@ -15,7 +15,7 @@
         <li><a href="create.html">Create</a></li>
         <li><a href="update.html">Update</a></li>
         <li><a href="delete.html">Delete</a></li>
-        <li><a href="data.html" class="active">Charts</a></li>
+        <li><a class="active" href="data.html">Charts</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
       <a class="btn btn-outline-light" href="index.html">Home</a>
@@ -24,11 +24,10 @@
 
   <main class="container py-4">
     <div class="row g-3">
-      <div class="col-lg-4"><div class="card p-3"><h5>Population Share (Top 6)</h5><canvas id="chartPopulation" height="260"></canvas></div></div>
-      <div class="col-lg-4"><div class="card p-3"><h5>GDP by State (Top 8)</h5><canvas id="chartGDP" height="260"></canvas></div></div>
-      <div class="col-lg-4"><div class="card p-3"><h5>Land Area (Top 10)</h5><canvas id="chartArea" height="260"></canvas></div></div>
+      <div class="col-lg-4"><div class="card p-3"><h5>Population Share (Top 6)</h5><canvas id="chartPopulation"></canvas></div></div>
+      <div class="col-lg-4"><div class="card p-3"><h5>GDP by State (Top 8)</h5><canvas id="chartGDP"></canvas></div></div>
+      <div class="col-lg-4"><div class="card p-3"><h5>Land Area (Top 10)</h5><canvas id="chartArea"></canvas></div></div>
     </div>
-
     <div id="externalInsights" class="mt-3"></div>
   </main>
 
