--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
       </div>
     </div>
 
+    <!-- Insights (WB or local fallback; never blank) -->
+    <div id="insights" class="mt-3"></div>
+
     <div class="card p-4 mt-3">
       <h5>Get Started</h5>
       <p class="muted">Use CRUD pages to manage records. Charts update automatically.</p>
@@ -55,9 +58,7 @@
   </main>
 
   <footer class="footer text-center py-3"><small>© 2025 US States Dashboard</small></footer>
-  <span class="text-muted-2">Built with ❤️ by Faisal, Hongxu & Jonathan</span>
 
-  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
   <script type="module" src="assets/controller.js"></script>
 
