--- a/create.html
+++ b/create.html
@@ -1,76 +1,76 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <title>Create State — US States Dashboard</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <link href="assets/styles.css" rel="stylesheet"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Create State • US States</title>
+  <link rel="stylesheet" href="assets/styles.css"/>
 </head>
-<body>
-  <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-    <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html">US States Dashboard</a>
-      <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navBar"><span class="navbar-toggler-icon"></span></button>
-      <div id="navBar" class="collapse navbar-collapse">
-        <ul class="navbar-nav me-auto">
-          <li class="nav-item"><a class="nav-link" href="read.html">Data Table</a></li>
-          <li class="nav-item"><a class="nav-link active" href="create.html">Create</a></li>
-          <li class="nav-item"><a class="nav-link" href="update.html">Update</a></li>
-          <li class="nav-item"><a class="nav-link" href="delete.html">Delete</a></li>
-          <li class="nav-item"><a class="nav-link" href="data.html">Charts</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-        </ul>
-        <a class="btn btn-outline-light btn-sm" href="read.html">Back to Table</a>
-      </div>
+<body data-page="create">
+  <nav class="nav">
+    <div class="brand">US States Dashboard</div>
+    <div class="links">
+      <a href="read.html">Data Table</a>
+      <a class="active" href="create.html">Create</a>
+      <a href="update.html">Update</a>
+      <a href="delete.html">Delete</a>
+      <a href="data.html">Charts</a>
+      <a href="about.html">About</a>
     </div>
+    <a class="btn" href="read.html">Back to Table</a>
   </nav>
 
-  <main class="container py-4">
-    <div class="card p-4">
-      <h4 class="mb-3">Add a New State</h4>
-      <form id="createForm" class="row g-3">
-        <div class="col-md-2"><label class="form-label">ID (USPS)</label><input name="id" class="form-control" placeholder="CA" required maxlength="2"/></div>
-        <div class="col-md-4"><label class="form-label">Name</label><input name="name" class="form-control" placeholder="California" required/></div>
-        <div class="col-md-3">
-          <label class="form-label">Region</label>
-          <select class="form-select" name="region" required>
-            <option value="NE">Northeast</option>
-            <option value="MW">Midwest</option>
-            <option value="S">South</option>
-            <option value="W">West</option>
-          </select>
+  <main class="container">
+    <section class="panel">
+      <h3 style="margin-top:0">Add a New State</h3>
+      <form id="state-form" class="form">
+        <div class="form-grid">
+          <div class="form-row">
+            <label for="id">ID (USPS)</label>
+            <input id="id" maxlength="2" placeholder="CA" required>
+          </div>
+          <div class="form-row">
+            <label for="name">Name</label>
+            <input id="name" placeholder="California" required>
+          </div>
+          <div class="form-row">
+            <label for="region">Region</label>
+            <select id="region" required></select>
+          </div>
+          <div class="form-row">
+            <label for="capital">Capital</label>
+            <input id="capital" placeholder="Sacramento">
+          </div>
+          <div class="form-row">
+            <label for="population">Population</label>
+            <input id="population" type="number" min="0" step="1" placeholder="39500000">
+          </div>
+          <div class="form-row">
+            <label for="gdp">GDP (USD)</label>
+            <input id="gdp" type="number" min="0" step="1" placeholder="3100000000000">
+          </div>
+          <div class="form-row">
+            <label for="area">Area (km²)</label>
+            <input id="area" type="number" min="0" step="1" placeholder="423967">
+          </div>
+          <div class="form-row">
+            <label for="cities"># Cities</label>
+            <input id="cities" type="number" min="0" step="1" placeholder="482">
+          </div>
         </div>
-        <div class="col-md-3"><label class="form-label">Capital</label><input name="capital" class="form-control" placeholder="Sacramento" required/></div>
-
-        <div class="col-md-3"><label class="form-label">Population</label><input name="population" type="number" min="0" class="form-control" required/></div>
-        <div class="col-md-3"><label class="form-label">GDP (USD)</label><input name="gdp" type="number" min="0" class="form-control" required/></div>
-        <div class="col-md-3"><label class="form-label">Area (km²)</label><input name="area" type="number" min="0" class="form-control" required/></div>
-        <div class="col-md-3"><label class="form-label"># Cities</label><input name="citiesCount" type="number" min="0" class="form-control" required/></div>
-
-        <div class="col-12 d-flex gap-2">
-          <button class="btn btn-accent" type="submit">Create</button>
-          <a class="btn btn-outline-light" href="read.html">Cancel</a>
+        <div style="display:flex;gap:10px;margin-top:8px">
+          <button class="btn" type="submit">Create</button>
+          <a id="cancel" class="btn btn-danger" href="#">Cancel</a>
         </div>
       </form>
-    </div>
+    </section>
+    <div style="text-align:right;color:#8aa1b3">Create (CRUD C)</div>
   </main>
 
-  <footer class="container py-4">
-    <div class="d-flex justify-content-between">
-      <span>© 2025 US States Dashboard</span>
-      <span class="text-muted-2">Create (CRUD C)</span>
-    </div>
-  </footer>
+  <footer>© 2025 US States Dashboard</footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
-  <script type="module">
-    import { initCreatePage } from "./assets/controller.js";
-    import "./assets/model.js";
-    initCreatePage();
-  </script>
-
-  <!-- Botpress -->
+  <script src="assets/model.js"></script>
+  <script src="assets/controller.js"></script>
   <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
   <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
 </body>
