--- a/read.html
+++ b/read.html
@@ -1,82 +1,49 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <title>US States — Read (Table)</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <link href="assets/styles.css" rel="stylesheet"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Data Table • US States</title>
+  <link rel="stylesheet" href="assets/styles.css"/>
 </head>
-<body>
-  <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-    <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html">US States Dashboard</a>
-      <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navBar"><span class="navbar-toggler-icon"></span></button>
-      <div id="navBar" class="collapse navbar-collapse">
-        <ul class="navbar-nav me-auto">
-          <li class="nav-item"><a class="nav-link active" href="read.html">Data Table</a></li>
-          <li class="nav-item"><a class="nav-link" href="create.html">Create</a></li>
-          <li class="nav-item"><a class="nav-link" href="update.html">Update</a></li>
-          <li class="nav-item"><a class="nav-link" href="delete.html">Delete</a></li>
-          <li class="nav-item"><a class="nav-link" href="data.html">Charts</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-        </ul>
-        <a class="btn btn-outline-light btn-sm" href="index.html">Home</a>
-      </div>
+<body data-page="read">
+  <nav class="nav">
+    <div class="brand">US States Dashboard</div>
+    <div class="links">
+      <a class="active" href="read.html">Data Table</a>
+      <a href="create.html">Create</a>
+      <a href="update.html">Update</a>
+      <a href="delete.html">Delete</a>
+      <a href="data.html">Charts</a>
+      <a href="about.html">About</a>
     </div>
+    <a class="btn" href="index.html">Home</a>
   </nav>
 
-  <main class="container py-4">
-    <div class="d-flex flex-wrap gap-2 align-items-center mb-3">
-      <input id="searchInput" class="form-control" style="max-width: 320px" placeholder="Search name, id, capital"/>
-      <select id="regionFilter" class="form-select" style="max-width: 200px">
-        <option value="ALL">All Regions</option>
-        <option value="NE">Northeast</option>
-        <option value="MW">Midwest</option>
-        <option value="S">South</option>
-        <option value="W">West</option>
-      </select>
-      <a class="btn btn-accent ms-auto" href="create.html">+ Add State</a>
-    </div>
-
-    <div class="card p-0">
-      <div class="table-responsive">
-        <table class="table align-middle mb-0">
-          <thead>
-            <tr>
-              <th>ID</th><th>Name</th><th>Capital</th><th>Population</th><th>GDP (USD)</th><th>Area (km²)</th><th>Cities</th><th class="text-end">Actions</th>
-            </tr>
-          </thead>
-          <tbody id="statesTableBody"></tbody>
-        </table>
+  <main class="container">
+    <div class="panel">
+      <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:10px">
+        <h3 style="margin:0">States</h3>
+        <a class="btn" href="create.html">+ Add State</a>
       </div>
-      <div class="p-3 d-flex justify-content-between">
-        <small id="rowCount" class="text-muted-2">0 record(s)</small>
-        <div>
-          <a class="btn btn-outline-light btn-sm" href="data.html">View Charts</a>
-        </div>
-      </div>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>ID</th><th>Name</th><th>Capital</th>
+            <th>Population</th><th>GDP (USD)</th><th>Area (km²)</th><th>Cities</th><th>Actions</th>
+          </tr>
+        </thead>
+        <tbody id="table-body"></tbody>
+      </table>
+      <div id="empty-note" class="notice" style="display:none;margin-top:12px">No records yet. Click “Add State”.</div>
     </div>
+    <div style="text-align:right;color:#8aa1b3">Read view (CRUD R)</div>
   </main>
 
-  <footer class="container py-4">
-    <div class="d-flex justify-content-between">
-      <span>© 2025 US States Dashboard</span>
-      <span class="text-muted-2">Read view (CRUD R)</span>
-    </div>
-  </footer>
+  <footer>© 2025 US States Dashboard</footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
-  <script type="module">
-    import { refreshReadTable } from "./assets/controller.js";
-    import "./assets/model.js";
-    const run = () => refreshReadTable();
-    document.getElementById("searchInput").addEventListener("input", run);
-    document.getElementById("regionFilter").addEventListener("change", run);
-    run();
-  </script>
-
-  <!-- Botpress -->
+  <script src="assets/model.js"></script>
+  <script src="assets/controller.js"></script>
   <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
   <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
 </body>
